# STec1.2021

./: Detección_Color.py  FacialDetection.py  FacialRecognition.py  README.md  codigoFinal.py  openCamara.py  pyproject.toml
